# quality-ci-checks

./: .gitignore  AGENTS.md  README.md  checks.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/quality/: checks.sh
scripts/quality/internal/: gate_emit.py  lib.sh
skill/quality-ci-checks/: SKILL.md  reference.md
skill/quality-ci-checks/quality/: checks.sh
skill/quality-ci-checks/quality/internal/: audit_deps.sh  lib.sh
skill/quality-ci-checks/scripts/: install.sh  repo.sh  scaffold.sh
skill/quality-ci-checks/templates/: pyproject-snippet.toml  vscode-tasks.json
